Comentários finais no projeto

--- a/CotaçãoDolar.ipynb
+++ b/CotaçãoDolar.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +85,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data</th>\n",
+       "      <th>Moeda</th>\n",
+       "      <th>Compra</th>\n",
+       "      <th>Venda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01/07/2024</td>\n",
+       "      <td>US</td>\n",
+       "      <td>5,5887</td>\n",
+       "      <td>5,5893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>02/07/2024</td>\n",
+       "      <td>US</td>\n",
+       "      <td>5,6671</td>\n",
+       "      <td>5,6677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>03/07/2024</td>\n",
+       "      <td>US</td>\n",
+       "      <td>5,5857</td>\n",
+       "      <td>5,5863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>04/07/2024</td>\n",
+       "      <td>US</td>\n",
+       "      <td>5,4833</td>\n",
+       "      <td>5,4839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>05/07/2024</td>\n",
+       "      <td>US</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Data Moeda  Compra   Venda\n",
+       "0  01/07/2024    US  5,5887  5,5893\n",
+       "1  02/07/2024    US  5,6671  5,6677\n",
+       "2  03/07/2024    US  5,5857  5,5863\n",
+       "3  04/07/2024    US  5,4833  5,4839\n",
+       "4  05/07/2024    US                "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d_cotacoes.head()\n",
     "#d_cotacoes.describe()"
@@ -95,16 +176,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data      object\n",
+       "Moeda     object\n",
+       "Compra    object\n",
+       "Venda     object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#Exibe os tipos de dados ainda sem tratamento (objetct)\n",
     "d_cotacoes.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,20 +218,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data      datetime64[ns]\n",
+       "Moeda             object\n",
+       "Compra           float32\n",
+       "Venda            float32\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#d_cotacoes['Venda'] = pd.to_numeric(d_cotacoes['Compra'].str.replace(',','.'), downcast='float')\n",
+    "# Dados devidamente tratados\n",
     "d_cotacoes.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data</th>\n",
+       "      <th>Compra</th>\n",
+       "      <th>Venda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1128</td>\n",
+       "      <td>1128.000000</td>\n",
+       "      <td>1128.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2022-04-01 06:24:15.319148800</td>\n",
+       "      <td>5.168765</td>\n",
+       "      <td>42.156597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2020-01-02 00:00:00</td>\n",
+       "      <td>4.020700</td>\n",
+       "      <td>4.021300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2021-02-10 18:00:00</td>\n",
+       "      <td>4.979050</td>\n",
+       "      <td>4.980375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2022-04-02 12:00:00</td>\n",
+       "      <td>5.182250</td>\n",
+       "      <td>5.183350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2023-05-17 06:00:00</td>\n",
+       "      <td>5.367100</td>\n",
+       "      <td>5.368375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2024-07-04 00:00:00</td>\n",
+       "      <td>5.936600</td>\n",
+       "      <td>41726.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.311606</td>\n",
+       "      <td>1242.219482</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Data       Compra         Venda\n",
+       "count                           1128  1128.000000   1128.000000\n",
+       "mean   2022-04-01 06:24:15.319148800     5.168765     42.156597\n",
+       "min              2020-01-02 00:00:00     4.020700      4.021300\n",
+       "25%              2021-02-10 18:00:00     4.979050      4.980375\n",
+       "50%              2022-04-02 12:00:00     5.182250      5.183350\n",
+       "75%              2023-05-17 06:00:00     5.367100      5.368375\n",
+       "max              2024-07-04 00:00:00     5.936600  41726.000000\n",
+       "std                              NaN     0.311606   1242.219482"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#estatísticas descritivas dos dados já tratados\n",
     "d_cotacoes.describe()"
    ]
   },
@@ -143,7 +353,7 @@
    "metadata": {},
    "source": [
     "### Conexão com banco de dados\n",
-    "Nesta seção será realizada a conexão com o banco de dados, para após tratamento dos dados, realizar a inserção das informações na tabela"
+    "Nesta seção será realizada a conexão com o banco de dados, após tratamento dos dados realizar a inserção das informações na tabela"
    ]
   },
   {
@@ -214,13 +424,6 @@
     "# Confirmar a transação\n",
     "conn.commit()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
