Inserção do DDL das tabelas do postgreSQL

--- a/CotaçãoDolar.ipynb
+++ b/CotaçãoDolar.ipynb
@@ -416,13 +416,52 @@
     "    venda = row['Venda']\n",
     "    \n",
     "    # Comando SQL de INSERT\n",
-    "    sql = f\"INSERT INTO ms.ms_vlcotacao (\\\"Data\\\",moeda,compra,venda) VALUES ('{data}','{moeda}',{compra},{venda})\"\n",
+    "    sql = f\"INSERT INTO ms.vlcotacao (\\\"Data\\\",moeda,compra,venda) VALUES ('{data}','{moeda}',{compra},{venda})\"\n",
     "    \n",
     "    # Executar o comando SQL\n",
     "    cursor.execute(sql)\n",
     "    \n",
     "# Confirmar a transação\n",
     "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Script do banco de dados\n",
+    "CREATE TABLE ms.tpmoeda (\n",
+    "\tid_moeda serial4 NOT NULL,\n",
+    "\tnome varchar NOT NULL,\n",
+    "\tsigla varchar NULL,\n",
+    "\tCONSTRAINT ms_tpmoeda_pk PRIMARY KEY (id_moeda)\n",
+    ");\n",
+    "\n",
+    "-- Table Triggers\n",
+    "\n",
+    "create trigger after_update_sigla after\n",
+    "update\n",
+    "    on\n",
+    "    ms.tpmoeda for each row\n",
+    "    when (((old.sigla)::text is distinct\n",
+    "from\n",
+    "    (new.sigla)::text)) execute function ms.after_update_sigla_function();\n",
+    "\n",
+    "CREATE TABLE ms.vlcotacao (\n",
+    "\t\"Data\" varchar NOT NULL,\n",
+    "\tmoeda varchar NOT NULL,\n",
+    "\tcompra float4 DEFAULT 0 NOT NULL,\n",
+    "\tvenda float4 DEFAULT 0 NOT NULL,\n",
+    "\tid_moeda int4 NULL,\n",
+    "\tCONSTRAINT fk_id_moeda FOREIGN KEY (id_moeda) REFERENCES ms.tpmoeda(id_moeda)\n",
+    ");\n",
+    "\n",
+    "-- Table Triggers\n",
+    "\n",
+    "create trigger before_insert_vl_cotacao before\n",
+    "insert\n",
+    "    on\n",
+    "    ms.vlcotacao for each row execute function ms.before_insert_vl_cotacao_function();"
    ]
   }
  ],
